WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305319
Fix ASSERT failures in setHasStorageForCurrentSite when Enhanced Security heuristics flag is enabled
https://bugs.webkit.org/show_bug.cgi?id=305319
Summary
Fix ASSERT failures in setHasStorageForCurrentSite when Enhanced Security heu...
ronan_turner
Reported
2026-01-12 04:30:10 PST
rdar://167979248
Attachments
Add attachment
proposed patch, testcase, etc.
ronan_turner
Comment 1
2026-01-14 06:49:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56564
EWS
Comment 2
2026-01-20 13:47:41 PST
Committed
305905@main
(d47ac2b838c1): <
https://commits.webkit.org/305905@main
> Reviewed commits have been landed. Closing PR #56564 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug