Ignore delayed hasStorageForCurrentSite callbacks for Enhanced Security https://bugs.webkit.org/show_bug.cgi?id=305319 rdar://167979248

Reviewed by Per Arne Vollan.

The following test fails when the Enhanced Security heuristics flag
is enabled by default:

  * WKBackForwardList.BackForwardNavigationSkipsItemsWithoutUserGestureFragment

This appears to relate to our local storage / cookie check callback,
which occurs in the background for a navigation when the heuristics flag
is enabled. This checks if the site being navigated to has cookies or
local storage set.

If the callback is delayed, it looks like we can hit our assertion that
the URL being checked does not match the current navigation URL. Instead,
we should ignore the callback in this case as it is now irrelevant.

No new test as this fixes occasional failures in existing test behaviour.

* Source/WebKit/UIProcess/API/APINavigation.cpp:
(API::Navigation::setHasStorageForCurrentSite):

Canonical link: https://commits.webkit.org/305905@main